Add word count functionality

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <script type="text/javascript" src="js/scripts.js">
+    <script type="text/javascript" src="js/scripts.js"></script>
 
-    </script>
     <title>JOURNAL</title>
   </head>
   <body>
+    <div id="displayMoment"></div>
     <form class="journalEntry" action="index.html" method="post">
       <label for="title">Title:</label>
       <input type="text" id="title">
